<resources>
    <string name="app_name">Hike Tracker</string>
    <string name="action_login">Login</string>
    <string name="action_add_hike">Add a Hike</string>
    <string name="action_trails">Duluth Trails</string>
    <string name="textViewMain">Trails Conquered:</string>

    <string name="buttonLogin">Login</string>
    <string name="buttonCreateAccount">Create Account</string>
    <string name="textViewLoginTitle">Enter Your Email and Password</string>
    <string name="textInputEmail">Email</string>
    <string name="textInputPassword">Password</string>

    <string name="buttonAdd">Add Hike</string>
    <string name="textViewTop">Enter Trail Information</string>
    <string name="textInputTrailName">Trail Name</string>
    <string name="textInputTime">Time (Hours)</string>
    <string name="textInputDistance">Distance (Miles)</string>

    <string name="textViewTrailName">Trail Name</string>
    <string name="textViewDistance">Distance</string>
    <string name="textViewTime">Time Spent</string>

    <string name="textViewTotals">Totals:</string>
    <string name="textViewTTime">Time:</string>
    <string name="textViewTDistance">Distance:</string>
    <string name="textViewTotalTime">Total Time</string>
    <string name="textViewTotalDistance">Total Distance</string>
</resources>
